Add nginx configuration from the original host configuration

--- a/site.conf
+++ b/site.conf
@@ -1,9 +1,9 @@
 server {
     index index.php index.html;
-    #server_name dummy;
+    server_name localhost;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-    root /_build/html;
+    root /usr/share/nginx/html/;
 
     location ~ \.php$ {
         try_files $uri =404;
@@ -13,5 +13,59 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+
+# The lines below are from the original host configuration
+
+    location = /favicon.ico {
+            log_not_found off;
+    }
+    location = /robots.txt {
+            allow all;
+            log_not_found off;
+            access_log off;
+    }
+    location / {
+                    # This is cool because no php is touched for static content.
+                    # include the "?$args" part so non-default permalinks doesn't break when using query string
+                    try_files $uri $uri/ /index.php?$args;
+    }
+
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+            expires max;
+            log_not_found off;
+    }
+    location /Developer {
+      rewrite ^(.*)$ /index.php?section=Devel break;
+    }
+    location /Devel {
+      rewrite ^(.*)$ /index.php?section=Devel break;
+    }
+    location /Developpeur {
+      rewrite ^(.*)$ /index.php?section=Devel break;
+    }
+    location /Contrib {
+      rewrite ^(.*)$ /index.php?section=Contrib break;
+    }
+    location /Contributor {
+      rewrite ^(.*)$ /index.php?section=Contrib break;
+    }
+    location /Contributeur {
+      rewrite ^(.*)$ /index.php?section=Contrib break;
+    }
+    location /User {
+      rewrite ^(.*)$ /index.php?section=User break;
+    }
+    location /Utilisateur {
+      rewrite ^(.*)$ /index.php?section=User break;
+    }
+    location /Admin {
+      rewrite ^(.*)$ /index.php?section=Admin break;
+    }
+    location /Administrateur {
+      rewrite ^(.*)$ /index.php?section=Admin break;
+    }
+    location /Administrator {
+      rewrite ^(.*)$ /index.php?section=Admin break;
     }
 }
